--- a/package.json
+++ b/package.json
@@ -9,21 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.5.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "eslint-config-next": "13.4.12",
+    "leaflet": "^1.9.4",
+    "next": "13.4.12",
+    "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.5.0",
     "postcss": "8.4.28",
+    "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.2",
+    "react-hook-toast": "^0.0.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
+    "react-multi-carousel": "^2.8.4",
+    "react-select": "^5.8.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "world-countries": "^5.0.0",
+    "yup": "^1.2.0",
+    "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/leaflet": "^1.9.11"
   }
 }
