--- a/package.json
+++ b/package.json
@@ -12,23 +12,36 @@
     "@auth/prisma-adapter": "^1.5.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.5",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.2.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.12",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.436.0",
     "next": "13.4.12",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.5.0",
     "postcss": "8.4.28",
     "query-string": "^9.0.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-hook-toast": "^0.0.3",
@@ -37,7 +50,14 @@
     "react-leaflet": "^4.2.1",
     "react-multi-carousel": "^2.8.4",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
+    "react-slider": "^2.0.6",
+    "react-stickynode": "^4.1.1",
+    "slick-carousel": "^1.8.1",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6",
     "world-countries": "^5.0.0",
     "yup": "^1.2.0",
@@ -45,6 +65,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/leaflet": "^1.9.11"
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/leaflet": "^1.9.11",
+    "@types/react-date-range": "^1.4.9",
+    "@types/react-slider": "^1.3.6",
+    "@types/react-stickynode": "^4.0.3"
   }
 }
